[metadata]
name = pytest-asptest
version = 0.1.1.dev0
description = test Answer Set Programming programs
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/pytest-asptest
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = asptest
install_requires =
    pytest>=3.5.0

[options.entry_points]
pytest11 =
    asptest = asptest.plugin
